Fix react-ace editor overflowing

--- a/src/styles/_ide.scss
+++ b/src/styles/_ide.scss
@@ -11,6 +11,18 @@
     height: 85vh;
   }
 
+  .Editor {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    .editor-control {
+      flex: initial;
+    }
+    .react-ace {
+      flex: 1;
+    }
+  }
+
   .Repl {
     height: 100%;
     overflow-y: auto;
